Remove padding on left and right of header menu items on large screens to prevent word wrap.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -180,6 +180,7 @@ header {
 
 					@include respond-to( $bp-l ) {
 						line-height: 80px;
+						padding: 0;
 					}
 
 					&:hover {
